[package]
name = "advent_of_codspeed"
version = "0.1.0"
edition = "2021"

[dependencies]
convolutions-rs = "0.3.4"
count-digits = "0.5.1"
itertools = "0.13.0"
ndarray = "0.16.1"
num = "0.4.3"
regex = "1.11.1"
wide = "0.7.30"

[dev-dependencies]
criterion = { package = "codspeed-criterion-compat", version = "*" }
